--- a/Bantu/Bantu/View/User/Draft.storyboard
+++ b/Bantu/Bantu/View/User/Draft.storyboard
@@ -245,9 +245,9 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8Z4-Q0-AEE">
-                                                <rect key="frame" x="0.0" y="203" width="375" height="65"/>
+                                                <rect key="frame" x="20" y="203" width="339" height="65"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9IN-yi-1wd">
                                                     <size key="itemSize" width="65" height="20"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -262,9 +262,8 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="65" height="20"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AWR-Lz-5pr">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AWR-Lz-5pr">
                                                                     <rect key="frame" x="0.0" y="0.0" width="65" height="20"/>
-                                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <nil key="textColor"/>
@@ -272,6 +271,12 @@
                                                                 </label>
                                                             </subviews>
                                                         </view>
+                                                        <constraints>
+                                                            <constraint firstAttribute="bottom" secondItem="AWR-Lz-5pr" secondAttribute="bottom" id="0pf-f3-EbX"/>
+                                                            <constraint firstItem="AWR-Lz-5pr" firstAttribute="leading" secondItem="T14-sr-MeY" secondAttribute="leading" id="1bf-Mi-Uer"/>
+                                                            <constraint firstAttribute="trailing" secondItem="AWR-Lz-5pr" secondAttribute="trailing" id="SHv-En-QoE"/>
+                                                            <constraint firstItem="AWR-Lz-5pr" firstAttribute="top" secondItem="T14-sr-MeY" secondAttribute="top" id="upB-YF-ngE"/>
+                                                        </constraints>
                                                         <connections>
                                                             <outlet property="myNeedsLabel" destination="AWR-Lz-5pr" id="IuW-wF-pWs"/>
                                                         </connections>
